# visualize-embeddings

./: .gitignore  README.md  docker-compose.yml  test.py
backend/: Dockerfile  README.md  embedding_service.py  main.py  pyproject.toml  requirements.txt  text.txt
backend/src/embeddings_backend/: __init__.py  corpus.py  dimensionality_reduction.py  embedding_service.py  embedding_store.py  main.py  model.py
frontend/: Dockerfile  app.js  index.html
